# hatch-pyinstaller

./: README.md  pyproject.toml
hatch_pyinstaller/: __init__.py  builder.py
tests/: .gitignore  test.py
tests/tst_package/: README.md  bar.spec  foo.spec  foobar.spec  pyproject.toml
tests/tst_package/src/tst_package/: __init__.py  bar.py  foo.py
